--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,6 +93,80 @@ StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+FbxImportUI.Animation=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.MasterPoseComponent=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+target_C.Tick=True
+target_C.Replication=True
+target_C.Rendering=True
+target_C.Collision=True
+target_C.Actor=True
+target_C.Input=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+target_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -155,7 +229,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -183,7 +257,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -193,6 +267,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/VRTemplate/Maps
@@ -1069,4 +1145,226 @@ SceneOutliner.TimeStamp=2022.02.07-07.08.56
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2022.02.07-07.08.30
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2022.02.07-07.08.57
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2022.02.07-07.08.51
+PinnedCommandList.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.02.07-07.08.30
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.02.07-07.08.01
+BlueprintGraph.LastCompileMethod=Unknown
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[DetailCategoriesAdvanced]
+FbxImportUI.Mesh=True
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=False
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MessageLog]
+LastLogListing=MapCheck
+
+[ContentBrowserRecent]
+MRUItem0=/Game/VRTemplate/Blueprints/target
+MRUItem1=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
+MRUItem2=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+
+[DetailPropertyExpansion]
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
+Object=
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Textures/download.download;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_bat_LP.Baseball_bat_LP;
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+
+[AssetEditorToolkitTabLocation]
+/Game/VRTemplate/Blueprints/target.target=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
