Added baseball bat with Collision and physics
Should be grabbable-needs testing

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -621,10 +621,29 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+GrabComponent_C.Variable=True
+GrabComponent_C.TransformCommon=True
+GrabComponent_C.Sockets=True
+GrabComponent_C.Default=True
+GrabComponent_C.Rendering=True
+GrabComponent_C.ComponentTick=True
+GrabComponent_C.Tags=True
+GrabComponent_C.Activation=True
+GrabComponent_C.Cooking=True
+GrabComponent_C.ComponentReplication=True
+GrabComponent_C.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Weapon.Weapon
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1655,6 +1674,8 @@ ExternalImagePicker.TimeStamp=2022.01.31-19.03.51
 ExternalImagePicker.LastCompileMethod=Unknown
 LauncherServices.TimeStamp=2022.01.31-19.03.52
 LauncherServices.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2022.01.31-19.03.56
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1810,9 +1831,10 @@ LastLogListing=MapCheck
 
 [ContentBrowserRecent]
 MRUItem0=/Game/VRTemplate/Blueprints/Weapon
-MRUItem1=/Game/VRTemplate/Blueprints/target
-MRUItem2=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
-MRUItem3=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem1=/Game/Meshes/StaticMesh
+MRUItem2=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem3=/Game/VRTemplate/Blueprints/target
+MRUItem4=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1825,8 +1847,11 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[2]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[2]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Meshes/StaticMesh.StaticMesh;
 RecentlyPlaced=/Game/VRTemplate/Textures/download.download;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_bat_LP.Baseball_bat_LP;
@@ -1843,6 +1868,9 @@ None=======
 MRUItem0=/Game/VRTemplate/Blueprints/Weapon
 MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/Grabbable_SmallCube.Grabbable_SmallCube=1
+/Game/VRTemplate/Blueprints/Baseball_bat_LP.Baseball_bat_LP=1
+/Game/Meshes/BaseballBatWithPhysics.BaseballBatWithPhysics=1
+/Game/VRTemplate/Blueprints/Weapon.Weapon=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
