cleaning up map
deleted extra props

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -641,6 +641,12 @@ GrabComponent_C.Activation=True
 GrabComponent_C.Cooking=True
 GrabComponent_C.ComponentReplication=True
 GrabComponent_C.Events=True
+Grabbable_SmallCube_2_C.Tick=True
+Grabbable_SmallCube_2_C.Replication=True
+Grabbable_SmallCube_2_C.Rendering=True
+Grabbable_SmallCube_2_C.Actor=True
+Grabbable_SmallCube_2_C.Collision=True
+Grabbable_SmallCube_2_C.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1830,11 +1836,12 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Weapon
-MRUItem1=/Game/Meshes/StaticMesh
-MRUItem2=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem3=/Game/VRTemplate/Blueprints/target
-MRUItem4=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
+MRUItem0=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem1=/Game/VRTemplate/Blueprints/Weapon
+MRUItem2=/Game/Meshes/StaticMesh
+MRUItem3=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem4=/Game/VRTemplate/Blueprints/target
+MRUItem5=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1871,6 +1878,7 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/Baseball_bat_LP.Baseball_bat_LP=1
 /Game/Meshes/BaseballBatWithPhysics.BaseballBatWithPhysics=1
 /Game/VRTemplate/Blueprints/Weapon.Weapon=1
+/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
