--- a/FinalVRProject/Saved/Config/Windows/Engine.ini
+++ b/FinalVRProject/Saved/Config/Windows/Engine.ini
@@ -61,3 +61,8 @@ TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[Oculus.Settings]
+GraphicsAdapter=0
+AudioInputDevice="{0.0.1.00000000}.{9b3db322-2539-410d-811a-e25cbcf137cb}"
+AudioOutputDevice="{0.0.0.00000000}.{87aa31c3-6081-486e-9732-4ae3bcefe086}"
+
