working ball and bat

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -40,7 +40,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -69,12 +69,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-65TG6N9J
 LastExecutedLaunchName=LAPTOP-65TG6N9J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InVR
+MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
 LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
@@ -649,9 +651,56 @@ Grabbable_SmallCube_2_C.Collision=True
 Grabbable_SmallCube_2_C.Input=True
 SKGLTFImportOptions_SKETCHFAB.Mesh=True
 Grabbable_SmallCube_2_C.TransformCommon=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+Grabbable_SmallCube_3_C.Tick=True
+Grabbable_SmallCube_3_C.Replication=True
+Grabbable_SmallCube_3_C.Rendering=True
+Grabbable_SmallCube_3_C.Actor=True
+Grabbable_SmallCube_3_C.Collision=True
+Grabbable_SmallCube_3_C.Input=True
+Grabbable_SmallCube_3_C.TransformCommon=True
+BaseballBat_C.TransformCommon=True
+BaseballBat_C.Replication=True
+BaseballBat_C.Rendering=True
+BaseballBat_C.Collision=True
+BaseballBat_C.Input=True
+BaseballBat_C.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root
+OpenAssetsAtExit=/sketchfa/baseball/baseball/baseball.baseball
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Weapon.Weapon
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1841,29 +1890,34 @@ None=======
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/sketchfa/baseball/baseball
-MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem2=/Game/VRTemplate/Blueprints/Weapon
-MRUItem3=/Game/Meshes/StaticMesh
-MRUItem4=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem5=/Game/VRTemplate/Blueprints/target
-MRUItem6=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
+MRUItem0=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem1=/Game/VRTemplate/Blueprints/Weapon
+MRUItem2=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem3=/sketchfa/baseball/baseball/baseball
+MRUItem4=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
+MRUItem5=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem6=/sketchfa/baseball/baseball
+MRUItem7=/Game/Meshes/StaticMesh
+MRUItem8=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem9=/Game/VRTemplate/Blueprints/target
+MRUItem10=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
+Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
+StaticMesh=
+StreamableRenderAsset=
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3.Grabbable_SmallCube_3;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2;
 RecentlyPlaced=/sketchfa/baseball/baseball.baseball;
 RecentlyPlaced=/Game/Meshes/StaticMesh.StaticMesh;
@@ -1887,6 +1941,7 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/Meshes/BaseballBatWithPhysics.BaseballBatWithPhysics=1
 /Game/VRTemplate/Blueprints/Weapon.Weapon=1
 /Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2=1
+/sketchfa/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1939,4 +1994,66 @@ bMergeMeshes=True
 bApplyWorldTransform=True
 bImportMaterials=True
 bImportInNewFolder=True
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
