--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -696,6 +696,11 @@ BaseballBat_C.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root
+OpenAssetsAtExit=/sketchfa/baseball/baseball/baseball.baseball
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Weapon.Weapon
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -785,7 +790,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/sketchfa/baseball/baseball
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1885,13 +1890,13 @@ None=======
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/sketchfa/baseball/baseball/baseball
-MRUItem1=/sketchfa/baseball/baseball
-MRUItem2=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
-MRUItem3=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
-MRUItem4=/Game/VRTemplate/Blueprints/Weapon
-MRUItem5=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem6=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem0=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem1=/Game/VRTemplate/Blueprints/Weapon
+MRUItem2=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem3=/sketchfa/baseball/baseball/baseball
+MRUItem4=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
+MRUItem5=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem6=/sketchfa/baseball/baseball
 MRUItem7=/Game/Meshes/StaticMesh
 MRUItem8=/Game/VRTemplate/Blueprints/Baseball_bat_LP
 MRUItem9=/Game/VRTemplate/Blueprints/target
@@ -1937,9 +1942,6 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/Weapon.Weapon=1
 /Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2=1
 /sketchfa/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root=1
-/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root=1
-/sketchfa/baseball/baseball.baseball=1
-/sketchfa/baseball/baseball/baseball.baseball=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1996,7 +1998,6 @@ bImportInNewFolder=True
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
