--- a/FinalVRProject/Saved/Config/Windows/Engine.ini
+++ b/FinalVRProject/Saved/Config/Windows/Engine.ini
@@ -66,3 +66,11 @@ GraphicsAdapter=0
 AudioInputDevice="{0.0.1.00000000}.{9b3db322-2539-410d-811a-e25cbcf137cb}"
 AudioOutputDevice="{0.0.0.00000000}.{87aa31c3-6081-486e-9732-4ae3bcefe086}"
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
