--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -693,14 +693,17 @@ BaseballBat_C.Rendering=True
 BaseballBat_C.Collision=True
 BaseballBat_C.Input=True
 BaseballBat_C.Actor=True
+BaseballBat_C.Tick=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+AssetViewerSettings.Settings=True
+FbxImportUI.LODSettings=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root
-OpenAssetsAtExit=/sketchfa/baseball/baseball/baseball.baseball
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Weapon.Weapon
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -790,7 +793,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Meshes
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -810,7 +813,7 @@ UNR=../../../../../../Github/Final-project/FinalVRProject/Content/VRTemplate/Map
 BRUSH=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBX=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBXAnim=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
-GenericImport=../../../../../../Users/andy/OneDrive/Desktop/worn-baseball-ball/worn-baseball-ball.zip
+GenericImport=../../../../../../Users/andy/OneDrive/Desktop/worn-baseball-ball/source/baseball_ball_01.fbx
 GenericExport=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 GenericOpen=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 GenericSave=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
@@ -1774,6 +1777,9 @@ TimelineEnabledSnaps=MontageSection
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
 StaticMesh.Collision=True
+StaticMesh.LODCustomMode=True
+FbxImportUI.Material=True
+PreviewMaterial.Material=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1806,7 +1812,7 @@ bAutoGenerateCollision=True
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
-bImportMeshLODs=False
+bImportMeshLODs=True
 NormalImportMethod=FBXNIM_ImportNormals
 NormalGenerationMethod=MikkTSpace
 bComputeWeightedNormals=True
@@ -1869,7 +1875,7 @@ bConvertSceneUnit=False
 
 [FBX_Import_UI_Option_FbxTextureImportData]
 bInvertNormalMaps=False
-MaterialSearchLocation=Local
+MaterialSearchLocation=AllAssets
 BaseMaterialName=None
 BaseColorName=
 BaseDiffuseTextureName=
@@ -1887,20 +1893,25 @@ bConvertSceneUnit=False
 None=======
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
-MRUItem1=/Game/VRTemplate/Blueprints/Weapon
-MRUItem2=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem3=/sketchfa/baseball/baseball/baseball
-MRUItem4=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
-MRUItem5=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem6=/sketchfa/baseball/baseball
-MRUItem7=/Game/Meshes/StaticMesh
-MRUItem8=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem9=/Game/VRTemplate/Blueprints/target
-MRUItem10=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
+MRUItem0=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem1=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem2=/Game/Meshes/lambert1
+MRUItem3=/Game/Meshes/baseball_ball_01
+MRUItem4=/Game/Meshes/StaticMesh1
+MRUItem5=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem6=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem7=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem8=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem9=/Game/VRTemplate/Blueprints/Weapon
+MRUItem10=/sketchfa/baseball/baseball/baseball
+MRUItem11=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
+MRUItem12=/sketchfa/baseball/baseball
+MRUItem13=/Game/Meshes/StaticMesh
+MRUItem14=/Game/VRTemplate/Blueprints/target
+MRUItem15=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1915,6 +1926,7 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 StaticMesh=
 StreamableRenderAsset=
+SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3.Grabbable_SmallCube_3;
@@ -1942,6 +1954,7 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/Weapon.Weapon=1
 /Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2=1
 /sketchfa/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root=1
+/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
