--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -701,9 +701,15 @@ MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 AssetViewerSettings.Settings=True
 FbxImportUI.LODSettings=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -793,7 +799,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Baseball
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1738,6 +1744,8 @@ LauncherServices.TimeStamp=2022.01.31-19.03.52
 LauncherServices.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2022.01.31-19.03.56
 StaticMeshEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2022.01.31-19.03.56
+TextureEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1896,19 +1904,19 @@ None=======
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/sketchfa/baseball/Scene_-_Root_normal
-MRUItem1=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem2=/Game/Meshes/lambert1
-MRUItem3=/Game/Meshes/baseball_ball_01
-MRUItem4=/Game/Meshes/StaticMesh1
-MRUItem5=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem6=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem7=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem8=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
-MRUItem9=/Game/VRTemplate/Blueprints/Weapon
-MRUItem10=/sketchfa/baseball/baseball/baseball
-MRUItem11=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
-MRUItem12=/sketchfa/baseball/baseball
+MRUItem0=/sketchfa/baseball/baseball
+MRUItem1=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem2=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem3=/Game/Meshes/lambert1
+MRUItem4=/Game/Meshes/baseball_ball_01
+MRUItem5=/Game/Meshes/StaticMesh1
+MRUItem6=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem7=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem8=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem9=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem10=/Game/VRTemplate/Blueprints/Weapon
+MRUItem11=/sketchfa/baseball/baseball/baseball
+MRUItem12=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
 MRUItem13=/Game/Meshes/StaticMesh
 MRUItem14=/Game/VRTemplate/Blueprints/target
 MRUItem15=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
@@ -1955,6 +1963,7 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2=1
 /sketchfa/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root=1
 /Game/VRTemplate/Blueprints/BaseballBat.BaseballBat=1
+/sketchfa/baseball/Scene_-_Root_normal.Scene_-_Root_normal=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2011,6 +2020,7 @@ bImportInNewFolder=True
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
