--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -799,7 +799,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Baseball
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1904,22 +1904,23 @@ None=======
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/sketchfa/baseball/baseball
-MRUItem1=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem0=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem1=/sketchfa/baseball/baseball
 MRUItem2=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem3=/Game/Meshes/lambert1
-MRUItem4=/Game/Meshes/baseball_ball_01
-MRUItem5=/Game/Meshes/StaticMesh1
-MRUItem6=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem7=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem8=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem9=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
-MRUItem10=/Game/VRTemplate/Blueprints/Weapon
-MRUItem11=/sketchfa/baseball/baseball/baseball
-MRUItem12=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
-MRUItem13=/Game/Meshes/StaticMesh
-MRUItem14=/Game/VRTemplate/Blueprints/target
-MRUItem15=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
+MRUItem3=/Game/Baseball/Scene_-_Root
+MRUItem4=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem5=/Game/Meshes/lambert1
+MRUItem6=/Game/Meshes/baseball_ball_01
+MRUItem7=/Game/Meshes/StaticMesh1
+MRUItem8=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem9=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem10=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem11=/Game/VRTemplate/Blueprints/Weapon
+MRUItem12=/sketchfa/baseball/baseball/baseball
+MRUItem13=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
+MRUItem14=/Game/Meshes/StaticMesh
+MRUItem15=/Game/VRTemplate/Blueprints/target
+MRUItem16=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1932,14 +1933,14 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-StaticMesh=
-StreamableRenderAsset=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3.Grabbable_SmallCube_3;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2;
 RecentlyPlaced=/sketchfa/baseball/baseball.baseball;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3.Grabbable_SmallCube_3;
 RecentlyPlaced=/Game/Meshes/StaticMesh.StaticMesh;
 RecentlyPlaced=/Game/VRTemplate/Textures/download.download;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
@@ -1964,6 +1965,8 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /sketchfa/baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root=1
 /Game/VRTemplate/Blueprints/BaseballBat.BaseballBat=1
 /sketchfa/baseball/Scene_-_Root_normal.Scene_-_Root_normal=1
+/sketchfa/baseball/baseball.baseball=1
+/Game/Baseball/Scene_-_Root.Scene_-_Root=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
