Building Baseball Diamond

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -707,6 +707,26 @@ Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compositing=True
+Pistol_C.TransformCommon=True
+Pistol_C.Replication=True
+Pistol_C.Rendering=True
+Pistol_C.Collision=True
+Pistol_C.Input=True
+Pistol_C.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+Baseball_C.TransformCommon=True
+Baseball_C.Replication=True
+Baseball_C.Rendering=True
+Baseball_C.Collision=True
+Baseball_C.Input=True
+Baseball_C.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
