Possibly fixed missing plugin message

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,7 +45,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
@@ -732,6 +732,7 @@ VRTemplateMap_C.Replication=True
 VRTemplateMap_C.Actor=True
 VRTemplateMap_C.Input=True
 K2Node_CustomEvent.GraphNodeDetail=True
+Baseball_C.Tick=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -789,13 +790,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/VRTemplate/Maps/VRTemplateMap
 
 [PluginBrowser]
+InstalledPlugins=LPSPSample
 InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-ScreenPosition=X=320.000 Y=149.000
+ScreenPosition=X=320.000 Y=148.800
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1281.000 Y=721.000
+WindowSize=X=1282.400 Y=722.400
 None=======
 InitiallyMaximized=True
 
@@ -842,7 +844,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../Github/Final-project/FinalVRProject/Content/VRTemplate/Maps
+UNR=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/VRTemplate/Maps
 BRUSH=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBX=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBXAnim=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
@@ -1721,34 +1723,34 @@ SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2022.02.07-07.08.51
 PinnedCommandList.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.02.07-07.08.30
-HierarchicalLODUtilities.TimeStamp=2022.01.31-19.03.51
+HierarchicalLODUtilities.TimeStamp=2022.02.07-07.08.30
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2022.02.07-07.08.01
-BlueprintGraph.TimeStamp=2022.01.31-19.03.47
+BlueprintGraph.TimeStamp=2022.02.07-07.08.01
 BlueprintGraph.LastCompileMethod=Unknown
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.LastCompileMethod=External
 None=======
-OculusHMD.TimeStamp=2022.01.31-19.11.32
-OculusHMD.LastCompileMethod=Unknown
-SteamVR.TimeStamp=2022.01.31-19.11.40
-SteamVR.LastCompileMethod=Unknown
-SteamVRInput.TimeStamp=2022.01.31-19.11.40
-SteamVRInput.LastCompileMethod=Unknown
-SteamVRInputDevice.TimeStamp=2022.01.31-19.11.40
-SteamVRInputDevice.LastCompileMethod=Unknown
-OculusInput.TimeStamp=2022.01.31-19.11.32
-OculusInput.LastCompileMethod=Unknown
-OculusEditor.TimeStamp=2022.01.31-19.11.32
-OculusEditor.LastCompileMethod=Unknown
-OculusMR.TimeStamp=2022.01.31-19.11.32
-OculusMR.LastCompileMethod=Unknown
-SteamVREditor.TimeStamp=2022.01.31-19.11.40
-SteamVREditor.LastCompileMethod=Unknown
-Voice.TimeStamp=2022.01.31-19.03.58
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2022.01.31-19.03.53
-MovieSceneCapture.LastCompileMethod=Unknown
+OculusHMD.TimeStamp=2022.02.07-07.44.40
+OculusHMD.LastCompileMethod=External
+SteamVR.TimeStamp=2022.02.07-07.45.10
+SteamVR.LastCompileMethod=External
+SteamVRInput.TimeStamp=2022.02.07-07.45.10
+SteamVRInput.LastCompileMethod=External
+SteamVRInputDevice.TimeStamp=2022.02.07-07.45.10
+SteamVRInputDevice.LastCompileMethod=External
+OculusInput.TimeStamp=2022.02.07-07.44.40
+OculusInput.LastCompileMethod=External
+OculusEditor.TimeStamp=2022.02.07-07.44.40
+OculusEditor.LastCompileMethod=External
+OculusMR.TimeStamp=2022.02.07-07.44.40
+OculusMR.LastCompileMethod=External
+SteamVREditor.TimeStamp=2022.02.07-07.45.10
+SteamVREditor.LastCompileMethod=External
+Voice.TimeStamp=2022.02.07-07.09.08
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2022.02.07-07.08.45
+MovieSceneCapture.LastCompileMethod=External
 EditorScriptingUtilities.TimeStamp=2022.01.31-19.08.20
 EditorScriptingUtilities.LastCompileMethod=Unknown
 SKGLTFMaterialBaking.TimeStamp=2021.11.03-18.31.00
@@ -1767,10 +1769,10 @@ WebBrowser.TimeStamp=2022.01.31-19.03.58
 WebBrowser.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.01.31-19.03.51
 ExternalImagePicker.LastCompileMethod=Unknown
-LauncherServices.TimeStamp=2022.01.31-19.03.52
-LauncherServices.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2022.01.31-19.03.56
-StaticMeshEditor.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2022.02.07-07.08.36
+LauncherServices.LastCompileMethod=External
+StaticMeshEditor.TimeStamp=2022.02.07-07.08.59
+StaticMeshEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2022.01.31-19.03.56
 TextureEditor.LastCompileMethod=Unknown
 
@@ -1928,27 +1930,29 @@ bConvertSceneUnit=False
 None=======
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Meshes/BaseballBatWithPhysics
-MRUItem1=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem2=/Game/VRTemplate/Blueprints/target
-MRUItem3=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem4=/sketchfa/baseball/baseball
-MRUItem5=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem6=/Game/Baseball/Scene_-_Root
-MRUItem7=/sketchfa/baseball/Scene_-_Root_normal
-MRUItem8=/Game/Meshes/lambert1
-MRUItem9=/Game/Meshes/baseball_ball_01
-MRUItem10=/Game/Meshes/StaticMesh1
-MRUItem11=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem12=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
-MRUItem13=/Game/VRTemplate/Blueprints/Weapon
-MRUItem14=/sketchfa/baseball/baseball/baseball
-MRUItem15=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
-MRUItem16=/Game/Meshes/StaticMesh
-MRUItem17=/Game/VRTemplate/Blueprints/Baseball_bat_LP_Skeleton
+MRUItem0=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem1=/Game/VRTemplate/Blueprints/Baseball
+MRUItem2=/Game/Baseball/baseball
+MRUItem3=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem4=/Game/Baseball/Scene_-_Root
+MRUItem5=/Game/Meshes/BaseballBatWithPhysics
+MRUItem6=/Game/VRTemplate/Blueprints/target
+MRUItem7=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem8=/sketchfa/baseball/baseball
+MRUItem9=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem10=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem11=/Game/Meshes/lambert1
+MRUItem12=/Game/Meshes/baseball_ball_01
+MRUItem13=/Game/Meshes/StaticMesh1
+MRUItem14=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem15=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem16=/Game/VRTemplate/Blueprints/Weapon
+MRUItem17=/sketchfa/baseball/baseball/baseball
+MRUItem18=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
+MRUItem19=/Game/Meshes/StaticMesh
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1961,13 +1965,14 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[2]\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[2]\" "
+StaticMesh=
+StreamableRenderAsset=
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat;
+RecentlyPlaced=/Game/Baseball/baseball.baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball.Baseball;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2;
 RecentlyPlaced=/sketchfa/baseball/baseball.baseball;
@@ -1998,6 +2003,9 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /sketchfa/baseball/baseball.baseball=1
 /Game/Baseball/Scene_-_Root.Scene_-_Root=1
 /Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap:PersistentLevel.VRTemplateMap=1
+/Game/Baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root=1
+/Game/Baseball/baseball.baseball=1
+/Game/VRTemplate/Blueprints/Baseball.Baseball=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2055,6 +2063,7 @@ bImportInNewFolder=True
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bShowGrid=False
+bRealtimeMaterialViewport=False
 
 [MaterialEditor]
 PrimType=1
