--- a/FinalVRProject/Saved/Config/Windows/Engine.ini
+++ b/FinalVRProject/Saved/Config/Windows/Engine.ini
@@ -29,6 +29,7 @@ Paths=../../../Engine/Plugins/Runtime/Oculus/OculusOpenXR/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
 Paths=../../../../../../Github/Final-project/FinalVRProject/Plugins/sketchfa/Content
+Paths=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Plugins/sketchfa/Content
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
